[tool.poetry]
name = "llamabot-test"
version = "0.1.0"
description = ""
authors = ["Amir Molavi <amir.molavi@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "3.12.6"
ipykernel = "~6.29.5"
pandas = "~2.2"
llamabot = "~0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
